--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,6 @@
 {
     "root": true,
     "ignorePatterns": [
-      "projects/**/*",
-      "src/mxtypes.d.ts",
-      "src/mxtypes/**"
     ],
     "overrides": [
       {
@@ -12,33 +9,16 @@
         ],
         "parserOptions": {
           "project": [
-            "tsconfig.json",
-            "e2e/tsconfig.e2e.json"
+            "tsconfig.json"
           ],
           "createDefaultProgram": true
         },
         "extends": [
           "eslint:recommended",
           "plugin:@typescript-eslint/recommended",
-          "plugin:@angular-eslint/recommended"
+          "plugin:cypress/recommended"
         ],
         "rules": {
-          "@angular-eslint/component-selector": [
-            "error",
-            {
-              "type": "element",
-              "prefix": "fcl",
-              "style": "kebab-case"
-            }
-          ],
-          "@angular-eslint/directive-selector": [
-            "error",
-            {
-              "type": "attribute",
-              "prefix": "fcl",
-              "style": "camelCase"
-            }
-          ],
           "quotes": ["error", "single"],
           "prefer-rest-params": "off",
           "no-prototype-builtins": "off",
@@ -57,21 +37,14 @@
           "@typescript-eslint/ban-ts-comment": "off",
           "@typescript-eslint/no-inferrable-types": "off",
           "@typescript-eslint/no-floating-promises": "off",
-          "@angular-eslint/no-empty-lifecycle-method": "off",
-          "@angular-eslint/no-output-on-prefix": "off",
-          "@angular-eslint/template/no-negated-async": "off",
-          "@angular-eslint/no-conflicting-lifecycle": "off",
-          "@angular-eslint/no-output-native": "off"
+          "no-unused-expressions": 0
         }
-      },
-      {
-        "files": [
-          "*.html"
-        ],
-        "extends": [
-          "plugin:@angular-eslint/template/recommended"
-        ],
-        "rules": {}
       }
-    ]
-  }
+    ],
+    "parserOptions": {
+        "sourceType": "module"
+    },
+    "env": {
+        "es2020": true
+    }
+}
