--- a/package.json
+++ b/package.json
@@ -1,113 +1,19 @@
 {
-  "name": "fcl-web-app",
+  "name": "fcl-web-test-app",
   "version": "1.2.1",
   "license": "GPL v3",
   "scripts": {
-    "ng": "ng",
-    "serverlessstart": "ng serve --configuration=serverless",
-    "serverlessstart:wra": "ng serve --host 0.0.0.0 --configuration=serverless",
-    "start": "ng serve --proxy-config proxy.config.json",
-    "serve": "ng serve --proxy-config proxy.config.json --watch --hmr",
-    "serve:fcldev": "ng serve --proxy-config proxy.config.fcldev.json --watch",
-    "serve:local": "ng serve",
-    "build:qa": "npm run clean && ng build --configuration=qa --output-path \"public\"",
-    "build:qa_wo_lint": "npm run clean && ng build --configuration=qa --output-path \"public\"",
-    "build:production": "npm run clean && ng build --configuration=production --output-path \"public\"",
-    "build:serverlessprod": "npm run clean && ng build --configuration=serverlessprod --output-path \"public\"",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:ci": "jest --runInBand",
-    "test:coverage": "jest --coverage",
-    "test:update-snapshot": "jest --updateSnapshot",
+    "lint:fix": "eslint --fix cypress",
+    "lint": "eslint cypress",
     "test:e2einteractive": "cypress open",
     "test:e2e": "cypress run",
-    "lint": "npm run lint:code && npm run lint:styles",
-    "lint:code": "npx ng lint",
-    "lint:styles": "stylelint \"src/**/*.scss\"",
-    "e2e": "ng e2e",
-    "gh-pages": "ng build --configuration=production --bh /fcl-client/",
-    "cloud9": "ng serve --host $IP --port $PORT",
-    "clean": "npx rimraf public/*"
+    "test:e2e:wovideo":  "cypress run --config video=false"
   },
   "private": true,
-  "dependencies": {
-    "@angular/animations": "^11.2.14",
-    "@angular/cdk": "^11.2.13",
-    "@angular/common": "^11.2.14",
-    "@angular/compiler": "^11.2.14",
-    "@angular/core": "^11.2.14",
-    "@angular/forms": "^11.2.14",
-    "@angular/material": "^11.2.13",
-    "@angular/platform-browser": "^11.2.14",
-    "@angular/platform-browser-dynamic": "^11.2.14",
-    "@angular/router": "^11.2.14",
-    "@auth0/angular-jwt": "^4.2.0",
-    "@ngrx/effects": "^11.1.1",
-    "@ngrx/store": "^11.1.1",
-    "@ngrx/store-devtools": "^11.1.1",
-    "@swimlane/ngx-datatable": "^19.0.0",
-    "ajv": "^6.12.6",
-    "core-js": "^3.21.1",
-    "css-element-queries": "^1.2.3",
-    "cytoscape": "~3.18.3",
-    "cytoscape-cola": "^2.5.1",
-    "cytoscape-dagre": "^2.4.0",
-    "cytoscape-spread": "^3.0.0",
-    "d3": "^5.16.0",
-    "hammerjs": "^2.0.8",
-    "html2canvas": "^1.4.1",
-    "immutable": "^3.8.2",
-    "javascript-lp-solver": "0.4.5",
-    "lodash": "^4.17.21",
-    "material-design-icons": "^3.0.1",
-    "moment": "^2.29.2",
-    "mxgraph": "^4.2.2",
-    "ngx-color-picker": "^11.0.0",
-    "normalize.css": "^8.0.1",
-    "ol": "^5.3.3",
-    "rxjs": "^6.6.7",
-    "seedrandom": "^3.0.5",
-    "tslib": "^2.3.1",
-    "zone.js": "~0.11.5"
-  },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.19",
-    "@angular-eslint/builder": "4.3.1",
-    "@angular-eslint/eslint-plugin": "4.3.1",
-    "@angular-eslint/eslint-plugin-template": "4.3.1",
-    "@angular-eslint/schematics": "4.3.1",
-    "@angular-eslint/template-parser": "4.3.1",
-    "@angular/cli": "^11.2.19",
-    "@angular/compiler-cli": "^11.2.14",
-    "@babel/compat-data": "^7.17.7",
-    "@ngrx/schematics": "~11.1.1",
-    "@types/d3": "^5.16.4",
-    "@types/hammerjs": "^2.0.41",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.47",
-    "@types/ol": "^5.3.8",
-    "@types/seedrandom": "^3.0.2",
-    "@typescript-eslint/eslint-plugin": "4.16.1",
-    "@typescript-eslint/parser": "4.16.1",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
     "cypress": "^4.12.1",
-    "eslint": "^7.32.0",
-    "jest": "^26.6.3",
-    "jest-canvas-mock": "^2.3.1",
-    "jest-preset-angular": "^8.4.0",
-    "jest-zone-patch": "0.0.10",
-    "ngentest": "^1.4.4",
-    "protractor": "~7.0.0",
-    "rimraf": "^3.0.2",
-    "rxjs-tslint": "^0.1.8",
-    "rxjs-tslint-rules": "^4.34.8",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^20.0.0",
-    "ts-jest": "^26.5.6",
-    "ts-node": "^8.10.2",
-    "tsutils": "^3.21.0",
-    "typescript": "4.0.5"
-  },
-  "fclConfig": {
-    "lastChange": "2019-06-12 11:25:17 +0200"
+    "eslint": "^8.14.0",
+    "eslint-plugin-cypress": "^2.12.1"
   }
 }
