--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "lint": "eslint cypress",
     "test:e2einteractive": "cypress open",
     "test:e2e": "cypress run",
-    "test:e2e:wovideo":  "cypress run --config video=false"
+    "test:e2e:wovideo": "cypress run --config video=false"
   },
   "private": true,
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "cypress": "^4.12.1",
-    "eslint": "^8.14.0",
-    "eslint-plugin-cypress": "^2.12.1"
+    "cypress": "~9.5.4",
+    "eslint": "^8.16.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "typescript": "^4.6.4"
   }
 }
