--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "lib": ["es2020"],
       "module": "commonjs",
       "target": "es2020",
-
+      "types": ["cypress"],
       "strict": true,
       "esModuleInterop": true,
       "skipLibCheck": true,
@@ -15,5 +15,6 @@
       "removeComments": true,
       "preserveConstEnums": true
     },
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules"],
+    "include": ["**/*.ts"]
   }
