--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,17 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# hidden config
+/config
+
 # compiled output
 /dist
 /public
 /tmp
 /out-tsc
+
+# build output
+/lib
+
 
 # dependencies
 /node_modules
@@ -35,6 +42,7 @@ testem.log
 /cypress/videos
 /cypress/screenshots
 /cypress/reports
+/cypress/downloads
 
 #System Files
 .DS_Store
