--- a/package.json
+++ b/package.json
@@ -3,18 +3,26 @@
   "version": "1.2.1",
   "license": "GPL v3",
   "scripts": {
+    "clean-snapshots": "npx rimraf cypress/snapshots/**/*",
+    "clean-image-snapshots": "npx rimraf cypress/snapshots/**/*.png",
+    "clean-data-snapshots": "npx rimraf cypress/snapshots/**/*.json",
+    "clean-image-snapshots:ruegenbfr": "npx rimraf cypress/snapshots/**/ruegenbfr*.png",
     "lint:fix": "eslint --fix cypress",
     "lint": "eslint cypress",
     "test:e2einteractive": "cypress open",
     "test:e2e": "cypress run",
-    "test:e2e:wovideo": "cypress run --config video=false"
+    "test:e2e:ruegenbfr": "cypress run --browser=chrome --env add-image-snapshot-prefix=ruegenbfr-chrome-"
   },
   "private": true,
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@cypress/schema-tools": "^4.7.9",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
     "cypress": "~9.5.4",
-    "eslint": "^8.16.0",
+    "cypress-image-snapshot": "^4.0.1",
+    "cypress-wait-until": "^1.7.2",
+    "eslint": "^8.23.0",
     "eslint-plugin-cypress": "^2.12.1",
-    "typescript": "^4.6.4"
+    "rimraf": "^3.0.2",
+    "typescript": "^4.8.3"
   }
 }
