adds github workflows, setup-check.spec.ts, and github api wrapper code
- github workflows:
  run-e2e.yml: runs e2e tests on a specific os with a specific browser
  run-e2e-tests.yml: runs e2e tests for several os and browsers
- setup-check.spec.ts: checks the basic availability of the web app, serves
  as a precheck
- github api wrapper code
  dispatch-run-e2e-tests.ts: dispatches the run-e2e-test.yml workflow on github
  dispatch-run-e2e.ts: dispatches the run-e2e.yml workflow on github
- apply-last-github-snapshot-updates.ts: checks the last runs of the run-e2e-test.yml
  and applies the image-snapshot artificats to the local snapshot folder

ticket: SiLeBAT/fcl-client#616

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
       "preserveConstEnums": true
     },
     "exclude": ["node_modules"],
-    "include": ["**/*.ts"]
+    "include": ["**/*.ts", "src/shared.ts"]
   }
