--- a/package.json
+++ b/package.json
@@ -3,26 +3,52 @@
   "version": "1.2.1",
   "license": "GPL v3",
   "scripts": {
+    "clean-code": "npx rimraf lib/*",
     "clean-snapshots": "npx rimraf cypress/snapshots/**/*",
     "clean-image-snapshots": "npx rimraf cypress/snapshots/**/*.png",
     "clean-data-snapshots": "npx rimraf cypress/snapshots/**/*.json",
+    "clean-github-image-snapshots": "npx rimraf cypress/snapshots/**/github-*.png",
     "clean-image-snapshots:ruegenbfr": "npx rimraf cypress/snapshots/**/ruegenbfr*.png",
-    "lint:fix": "eslint --fix cypress",
-    "lint": "eslint cypress",
+    "lint:fix": "eslint --fix src cypress",
+    "lint": "eslint src cypress",
     "test:e2einteractive": "cypress open",
     "test:e2e": "cypress run",
-    "test:e2e:ruegenbfr": "cypress run --browser=chrome --env add-image-snapshot-prefix=ruegenbfr-chrome-"
+    "test:e2e:ruegenbfr": "cypress run --browser=chrome --env add-image-snapshot-prefix=ruegenbfr-chrome-",
+    "update-image-snapshots:ruegenbfr": "npx rimraf cypress/snapshots/**/ruegenbfr-*.png && npx cypress run --browser=chrome --env imageSnapshotPrefix=\"ruegenbfr-{browser}-\"",
+    "_test:e2e:ruegenbfr": "npx cypress run --browser=chrome --env imageSnapshotPrefix=\"ruegenbfr-{browser}-\"",
+    "dispatch:e2e:use-current-branch": "node lib/dispatch-run-e2e.js --ref $(git branch --show-current)",
+    "dispatch:e2e-tests:use-current-branch": "node lib/dispatch-run-e2e-tests.js --ref $(git branch --show-current)",
+    "dispatch:e2e": "node lib/dispatch-run-e2e.js",
+    "dispatch:e2e-tests": "node lib/dispatch-run-e2e-tests.js",
+    "test:e2e:precheck": "cypress run --spec=cypress/integration/setup-check.spec.ts",
+    "tsc": "tsc -p tsconfig.build.json",
+    "prebuild": "npm run clean-code",
+    "build": "npm run tsc",
+    "pretty": "prettier --write \"src/**/*.ts\""
   },
   "private": true,
   "devDependencies": {
     "@cypress/schema-tools": "^4.7.9",
+    "@cypress/skip-test": "^2.6.1",
+    "@types/node": "^18.7.18",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "cypress": "~9.5.4",
     "cypress-image-snapshot": "^4.0.1",
     "cypress-wait-until": "^1.7.2",
     "eslint": "^8.23.0",
     "eslint-plugin-cypress": "^2.12.1",
+    "extract-zip": "^2.0.1",
+    "lint-staged": "~11.1.4",
+    "prettier": "2.6.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "@octokit/core": "^4.0.0",
+    "command-line-args": "^5.2.1",
+    "config": "^3.3.8",
+    "pretty-format": "^29.0.3",
+    "proxy-agent": "^5.0.0",
+    "yargs-parser": "^21.1.1"
   }
 }
