fix yaml syntax problem

--- a/.github/workflows/run-e2e.yml
+++ b/.github/workflows/run-e2e.yml
@@ -100,7 +100,7 @@ on:
       browser:
         required: true
         type: string
-        description: "Browser to use for the test. Available options chrome, firefox, edge.
+        description: "Browser to use for the test. Available options chrome, firefox, edge."
       browser_version:
         required: false
         default: ''
